--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
@@ -94,5 +93,20 @@ body {
   80%,
   100% {
     transform: translateX(-37.5%) rotate(1turn);
+  }
+}
+
+/* HTML: <div class="loader-small"></div> */
+.loader-small {
+  aspect-ratio: 1.154;
+  --_g: no-repeat radial-gradient(farthest-side, #738897 90%, #0000);
+  background: var(--_g) 50% 0, var(--_g) 0 100%, var(--_g) 100% 100%;
+  background-size: 35% calc(35% * 1.154);
+  animation: l16 1s infinite;
+}
+@keyframes l16 {
+  50%,
+  100% {
+    background-position: 100% 100%, 50% 0, 0 100%;
   }
 }
